--- a/src/main.html
+++ b/src/main.html
@@ -89,7 +89,9 @@
                   <div class="container text-center pb-12 ">
                     <h2 class="text-2xl font-medium  text-white">Mobile App</h2>
                     <h3 class="text-xl font-medium text-white pb-4">A android application</h3>
-                    <img src="../src/assets/ss_mobile.png"  alt="screenshot" class="object-fill w-64 mx-auto">
+                    <img id="screenshot" src="../src/assets/ss_mobile.png"  alt="screenshot" class="object-fill w-64 mx-auto">
+                  
+                    <button id="nextBtn">next</button>
                     <h2 class="text-2xl font-medium text-white ">Japanese Midnight Car</h2>
                   
                     <div class="mx-auto  flex justify-center ">     
@@ -190,3 +192,4 @@
 
 </body>
 </html>
+
