--- a/src/main.html
+++ b/src/main.html
@@ -121,17 +121,27 @@
                     <h3 class="text-xl font-medium text-white">A cross-platform game application</h3>
                     <div class="grid grid-cols-3 gap-5">
                         <div class="text-center">
-                            <img src="https://i.pinimg.com/564x/ec/44/9c/ec449cf0ac9a1f0aac460e7e5f106b65.jpg" alt="screenshot" class="w-1/3 mx-auto">
+                            <!-- <img src="https://i.pinimg.com/564x/ec/44/9c/ec449cf0ac9a1f0aac460e7e5f106b65.jpg" alt="screenshot" class="w-1/3 mx-auto"> -->
+                            <video class="inline-flex z-10" width="250" height="250" loop autoplay muted>
+                              <source src="./assets/webm/game1.webm"type="video/webm">
+                              <source src="./assets/mp4/game1.mp4"type="video/mp4">
+                            </video>
                            <a href="https://ekearis.itch.io/lost-in-fishing" class="text-my-crown hover:text-white"> <h2 class="text-2xl font-medium ">Game 1</h2></a>
                             <p class="text-base text-white text-center py-4">Game 1 is a fast-paced action game where players must navigate through obstacles and enemies to reach the end of each level. It features stunning graphics and challenging gameplay.</p>
                             </div>
                             <div class="text-center">
-                            <img src="https://i.pinimg.com/564x/ec/44/9c/ec449cf0ac9a1f0aac460e7e5f106b65.jpg" alt="screenshot" class="w-1/3 mx-auto">
+                              <video class="inline-flex z-10" width="250" height="250" loop autoplay muted>
+                                <source src="./assets/webm/game2.webm"type="video/webm">
+                                <source src="./assets/mp4/game2.mp4"type="video/mp4">
+                              </video>
                             <a href="https://ekearis.itch.io/litlle-doctor-preview" class="text-my-crown hover:text-white"> <h2 class="text-2xl font-medium ">Game 2</h2></a>
                             <p class="text-base text-white text-center py-4">Game 2 is a puzzle game that tests players' logic and problem-solving skills. It features multiple levels and increasing difficulty as players progress through the game.</p>
                             </div>
                             <div class="text-center">
-                            <img src="https://i.pinimg.com/564x/ec/44/9c/ec449cf0ac9a1f0aac460e7e5f106b65.jpg" alt="screenshot" class="w-1/3 mx-auto">
+                              <video class="inline-flex z-10" width="250" height="250" loop autoplay muted>
+                                <source src="./assets/webm/game3.webm"type="video/webm">
+                                <source src="./assets/mp4/game3.mp4"type="video/mp4">
+                              </video>
                             <h2 class="text-2xl font-medium text-white ">Game 3</h2>
                             <p class="text-base text-white text-center py-4">Game 3 is a multiplayer game where players compete against each other in a virtual arena. It features multiple game modes and weapons to choose from, as well as customizable characters.</p>
                             </div>
@@ -193,6 +203,7 @@
             </div>
         </div>
     </section>
+
     
       
 
