--- a/src/main.html
+++ b/src/main.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <link href="/dist/output.css" rel="stylesheet">
 </head>
 <body class="bg-my-black">
@@ -82,7 +83,7 @@
           </div>
         </section>
 
-        <section class="bg-gray-400 mb-8">
+        <section class="bg-my-black mb-8">
             <div class="container mx-auto py-1">
                 <h1 id="projects" class="text-5xl font-bold text-center pt-4 pb-8 text-white underline">Projects</h1>
                 <div class="grid grid-cols-1 ">
@@ -158,7 +159,7 @@
                               </div>
                             </section>
 
-                            <section class="bg-gray-500 mb-8">
+                            <section class="bg-my-black mb-8">
         <div class="container mx-auto py-1 w-3/4">
             <div class="grid grid-cols-2 gap-5">
                 <div class=" col-span-1">
