--- a/src/main.html
+++ b/src/main.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <head>
+  <title>Portfolio ~Naufal Adyatma</title>
+  <link rel="icon" type="image/png" href="./assets/logo.jpg">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet"> -->
@@ -127,24 +129,24 @@
                               <source src="./assets/webm/game1.webm"type="video/webm">
                               <source src="./assets/mp4/game1.mp4"type="video/mp4">
                             </video>
-                           <a href="https://ekearis.itch.io/lost-in-fishing" class="text-my-crown hover:text-white"> <h2 class="text-2xl font-medium ">Game 1</h2></a>
-                            <p class="text-base text-white text-center py-4">Game 1 is a fast-paced action game where players must navigate through obstacles and enemies to reach the end of each level. It features stunning graphics and challenging gameplay.</p>
+                           <a href="https://ekearis.itch.io/lost-in-fishing" class="text-my-crown hover:text-white"> <h2 class="text-2xl font-medium ">Lost in Fishing</h2></a>
+                            <p class="text-base text-white text-center py-4">Lost in Fishing is a pixelated, 2D fishing game that offers a simple and enjoyable experience. Players will cast their lines and reel in their catches while earning silver to upgrade their equipment. With minimalist graphics and a focus on simplicity, Lost in Fishing is perfect for casual gamers looking for a relaxing and stress-free fishing adventure.</p>
                             </div>
                             <div class="text-center">
                               <video class="inline-flex z-10" width="250" height="250" loop autoplay muted>
                                 <source src="./assets/webm/game2.webm"type="video/webm">
                                 <source src="./assets/mp4/game2.mp4"type="video/mp4">
                               </video>
-                            <a href="https://ekearis.itch.io/litlle-doctor-preview" class="text-my-crown hover:text-white"> <h2 class="text-2xl font-medium ">Game 2</h2></a>
-                            <p class="text-base text-white text-center py-4">Game 2 is a puzzle game that tests players' logic and problem-solving skills. It features multiple levels and increasing difficulty as players progress through the game.</p>
+                            <a href="https://ekearis.itch.io/litlle-doctor-preview" class="text-my-crown hover:text-white"> <h2 class="text-2xl font-medium ">Little Doctor</h2></a>
+                            <p class="text-base text-white text-center py-4">Little Doctor is a fun and educational puzzle-simulation game where players take on the role of a herbal doctor treating patients using various herbs and remedies. Players can learn about different diseases and treatments while managing their time and patients. With colorful graphics and engaging gameplay, Little Doctor offers a unique gaming experience.</p>
                             </div>
                             <div class="text-center">
                               <video class="inline-flex z-10" width="250" height="250" loop autoplay muted>
                                 <source src="./assets/webm/game3.webm"type="video/webm">
                                 <source src="./assets/mp4/game3.mp4"type="video/mp4">
                               </video>
-                            <h2 class="text-2xl font-medium text-white ">Game 3</h2>
-                            <p class="text-base text-white text-center py-4">Game 3 is a multiplayer game where players compete against each other in a virtual arena. It features multiple game modes and weapons to choose from, as well as customizable characters.</p>
+                            <h2 class="text-2xl font-medium text-white ">Flag Defender</h2>
+                            <p class="text-base text-white text-center py-4">Flag Defender is a fast-paced action game where players must collect flags from the enemy base while defending themselves with a pillow. Players must navigate through obstacles and enemies while avoiding falling into the mud. Players earn stars based on the number of flags collected, to progress to more challenging levels.</p>
                             </div>
                             </div>
                             </div>
