--- a/src/main.html
+++ b/src/main.html
@@ -108,7 +108,7 @@
                     <div class="text-center">
                         <h2 class="text-2xl font-medium  text-white"><b>Desktop App</b></h2>
                         <h3 class="text-xl font-medium text-white">A cross-platform desktop application</h3>
-                        <img src="../src/assets/ss_SignToMe.png" alt="screenshot" class="w-1/3 mx-auto">
+                        <img src="../src/assets/ss_signtome.png" alt="screenshot" class="w-1/3 mx-auto">
                         <h2 class="text-2xl font-medium text-white ">SignToMe</h2>
                       
                         <div class="mx-auto  flex justify-center ">     
